# tictactoe

./: CMakeLists.txt  LICENSE  README.md
doc/: statediagram.puml
include/: application.h  assetmanager.h  configuration.h  gamelogic.h  gamestate.h  sdlshim.h
src/: application.cpp  assetmanager.cpp  gamestate.cpp  main.cpp
test/: application_tb.cpp  configuration_tb.cpp  gamelogic_tb.cpp  gamestate_tb.cpp  mocksdl.h
